@@ -33,7 +33,7 @@ common_setup() {
     load "${BATS_LIB_PREFIX}/bats-assert/load.bash"
     load "${BATS_LIB_PREFIX}/bats-file/load.bash"
 
-    PATH="${SOLR_TIP:-.}/bin:$PATH"
+    PATH="${SOLR_TIP:-.}/bin:${SOLR_TIP:-.}/prometheus-exporter/bin:$PATH"
     export SOLR_ULIMIT_CHECKS=false
 }
 
@@ -60,6 +60,11 @@ save_home_on_failure() {
 
 shutdown_all() {
   solr stop -all >/dev/null 2>&1
+}
+
+shutdown_exporter(){
+  EXPORTER_PID=$(ps auxww | grep org.apache.solr.prometheus.exporter.SolrExporter | awk "/-classpath/"' {print $2}' | sort -r)
+  kill -9 $EXPORTER_PID
 }
 
 delete_all_collections() {
